besu/ingress/k8s-backups/20250630-223913/ingressroutes-backup.yaml
apiVersion: v1
items:
- apiVersion: traefik.io/v1alpha1
  kind: IngressRoute
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"traefik.io/v1alpha1","kind":"IngressRoute","metadata":{"annotations":{},"name":"paladin1-ui-ingress","namespace":"paladin"},"spec":{"entryPoints":["websecure"],"routes":[{"kind":"Rule","match":"Host(`paladin1.cluster.eita.cloud`) \u0026\u0026 PathPrefix(`/ui`)","middlewares":[{"name":"my-basic-auth"}],"services":[{"name":"paladin-node1","port":8548}]}],"tls":{"secretName":"paladin1-tls"}}}
    creationTimestamp: "2025-07-01T01:25:43Z"
    generation: 1
    name: paladin1-ui-ingress
    namespace: paladin
    resourceVersion: "37166363"
    uid: de1d4372-6e9e-435d-9843-a645d8a2b625
  spec:
    entryPoints:
    - websecure
    routes:
    - kind: Rule
      match: Host(`paladin1.cluster.eita.cloud`) && PathPrefix(`/ui`)
      middlewares:
      - name: my-basic-auth
      services:
      - name: paladin-node1
        port: 8548
    tls:
      secretName: paladin1-tls
- apiVersion: traefik.io/v1alpha1
  kind: IngressRoute
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"traefik.io/v1alpha1","kind":"IngressRoute","metadata":{"annotations":{},"name":"paladin2-ui-ingress","namespace":"paladin"},"spec":{"entryPoints":["websecure"],"routes":[{"kind":"Rule","match":"Host(`paladin2.cluster.eita.cloud`) \u0026\u0026 PathPrefix(`/ui`)","middlewares":[{"name":"my-basic-auth"}],"services":[{"name":"paladin-node2","port":8548}]}],"tls":{"secretName":"paladin2-tls"}}}
    creationTimestamp: "2025-07-01T01:25:44Z"
    generation: 1
    name: paladin2-ui-ingress
    namespace: paladin
    resourceVersion: "37166401"
    uid: b8a8d13c-dadf-4fa6-958e-3dbf191b8d7f
  spec:
    entryPoints:
    - websecure
    routes:
    - kind: Rule
      match: Host(`paladin2.cluster.eita.cloud`) && PathPrefix(`/ui`)
      middlewares:
      - name: my-basic-auth
      services:
      - name: paladin-node2
        port: 8548
    tls:
      secretName: paladin2-tls
- apiVersion: traefik.io/v1alpha1
  kind: IngressRoute
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"traefik.io/v1alpha1","kind":"IngressRoute","metadata":{"annotations":{},"name":"paladin3-ui-ingress","namespace":"paladin"},"spec":{"entryPoints":["websecure"],"routes":[{"kind":"Rule","match":"Host(`paladin3.cluster.eita.cloud`) \u0026\u0026 PathPrefix(`/ui`)","middlewares":[{"name":"my-basic-auth"}],"services":[{"name":"paladin-node3","port":8548}]}],"tls":{"secretName":"paladin3-tls"}}}
    creationTimestamp: "2025-07-01T01:25:45Z"
    generation: 1
    name: paladin3-ui-ingress
    namespace: paladin
    resourceVersion: "37166493"
    uid: 19abbdb1-cb38-44bd-a7fd-56317ba95bbd
  spec:
    entryPoints:
    - websecure
    routes:
    - kind: Rule
      match: Host(`paladin3.cluster.eita.cloud`) && PathPrefix(`/ui`)
      middlewares:
      - name: my-basic-auth
      services:
      - name: paladin-node3
        port: 8548
    tls:
      secretName: paladin3-tls
kind: List
metadata:
  resourceVersion: ""
