besu/ingress/k8s-backups/20250630-223913/middlewares-backup.yaml
apiVersion: v1
items:
- apiVersion: traefik.io/v1alpha1
  kind: Middleware
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"traefik.io/v1alpha1","kind":"Middleware","metadata":{"annotations":{},"name":"basic-auth","namespace":"paladin"},"spec":{"basicAuth":{"secret":"basic-auth-secret"}}}
    creationTimestamp: "2025-07-01T01:25:45Z"
    generation: 1
    name: basic-auth
    namespace: paladin
    resourceVersion: "37166534"
    uid: 0a6e7c21-dc72-4134-a96c-91a982067a55
  spec:
    basicAuth:
      secret: basic-auth-secret
kind: List
metadata:
  resourceVersion: ""
