besu/ingress/k8s-backups/20250630-223913/services-backup.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      field.cattle.io/publicEndpoints: '[{"port":31547,"protocol":"TCP","serviceName":"paladin:besu-node1","allNodes":true},{"port":32660,"protocol":"TCP","serviceName":"paladin:besu-node1","allNodes":true},{"port":32660,"protocol":"UDP","serviceName":"paladin:besu-node1","allNodes":true},{"port":31545,"protocol":"TCP","serviceName":"paladin:besu-node1","allNodes":true},{"port":31546,"protocol":"TCP","serviceName":"paladin:besu-node1","allNodes":true}]'
    creationTimestamp: "2025-07-01T01:25:48Z"
    labels:
      app: besu
      app.kubernetes.io/instance: node1
      app.kubernetes.io/name: besu-node1
      app.kubernetes.io/part-of: paladin
    name: besu-node1
    namespace: paladin
    ownerReferences:
    - apiVersion: core.paladin.io/v1alpha1
      blockOwnerDeletion: true
      controller: true
      kind: Besu
      name: node1
      uid: 97005666-0c6d-44c3-b9c1-5ddf7e8c1ad3
    resourceVersion: "37166736"
    uid: 5845e58b-1146-4cf0-9ad7-c3949533bee5
  spec:
    clusterIP: 10.43.33.177
    clusterIPs:
    - 10.43.33.177
    externalTrafficPolicy: Cluster
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: graphql-http
      nodePort: 31547
      port: 8547
      protocol: TCP
      targetPort: 8547
    - name: p2p-tcp
      nodePort: 32660
      port: 30303
      protocol: TCP
      targetPort: 30303
    - name: p2p-udp
      nodePort: 32660
      port: 30303
      protocol: UDP
      targetPort: 30303
    - name: rpc-http
      nodePort: 31545
      port: 8545
      protocol: TCP
      targetPort: 8545
    - name: rpc-ws
      nodePort: 31546
      port: 8546
      protocol: TCP
      targetPort: 8546
    selector:
      app: besu
      app.kubernetes.io/instance: node1
      app.kubernetes.io/name: besu-node1
      app.kubernetes.io/part-of: paladin
    sessionAffinity: None
    type: NodePort
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      field.cattle.io/publicEndpoints: '[{"port":31647,"protocol":"TCP","serviceName":"paladin:besu-node2","allNodes":true},{"port":31833,"protocol":"TCP","serviceName":"paladin:besu-node2","allNodes":true},{"port":31833,"protocol":"UDP","serviceName":"paladin:besu-node2","allNodes":true},{"port":31645,"protocol":"TCP","serviceName":"paladin:besu-node2","allNodes":true},{"port":31646,"protocol":"TCP","serviceName":"paladin:besu-node2","allNodes":true}]'
    creationTimestamp: "2025-07-01T01:25:46Z"
    labels:
      app: besu
      app.kubernetes.io/instance: node2
      app.kubernetes.io/name: besu-node2
      app.kubernetes.io/part-of: paladin
    name: besu-node2
    namespace: paladin
    ownerReferences:
    - apiVersion: core.paladin.io/v1alpha1
      blockOwnerDeletion: true
      controller: true
      kind: Besu
      name: node2
      uid: ec04f547-d30b-47be-8e94-67ff2475db37
    resourceVersion: "37166576"
    uid: 2f2a20cd-73b5-48cd-aab0-8a51289fa3e8
  spec:
    clusterIP: 10.43.16.193
    clusterIPs:
    - 10.43.16.193
    externalTrafficPolicy: Cluster
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: graphql-http
      nodePort: 31647
      port: 8547
      protocol: TCP
      targetPort: 8547
    - name: p2p-tcp
      nodePort: 31833
      port: 30303
      protocol: TCP
      targetPort: 30303
    - name: p2p-udp
      nodePort: 31833
      port: 30303
      protocol: UDP
      targetPort: 30303
    - name: rpc-http
      nodePort: 31645
      port: 8545
      protocol: TCP
      targetPort: 8545
    - name: rpc-ws
      nodePort: 31646
      port: 8546
      protocol: TCP
      targetPort: 8546
    selector:
      app: besu
      app.kubernetes.io/instance: node2
      app.kubernetes.io/name: besu-node2
      app.kubernetes.io/part-of: paladin
    sessionAffinity: None
    type: NodePort
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      field.cattle.io/publicEndpoints: '[{"port":31747,"protocol":"TCP","serviceName":"paladin:besu-node3","allNodes":true},{"port":30989,"protocol":"TCP","serviceName":"paladin:besu-node3","allNodes":true},{"port":30989,"protocol":"UDP","serviceName":"paladin:besu-node3","allNodes":true},{"port":31745,"protocol":"TCP","serviceName":"paladin:besu-node3","allNodes":true},{"port":31746,"protocol":"TCP","serviceName":"paladin:besu-node3","allNodes":true}]'
    creationTimestamp: "2025-07-01T01:25:47Z"
    labels:
      app: besu
      app.kubernetes.io/instance: node3
      app.kubernetes.io/name: besu-node3
      app.kubernetes.io/part-of: paladin
    name: besu-node3
    namespace: paladin
    ownerReferences:
    - apiVersion: core.paladin.io/v1alpha1
      blockOwnerDeletion: true
      controller: true
      kind: Besu
      name: node3
      uid: a033ba16-1c47-4839-8c04-d3e48fc17c69
    resourceVersion: "37166655"
    uid: 62c5a583-54fd-4752-a40b-497d62167a61
  spec:
    clusterIP: 10.43.215.132
    clusterIPs:
    - 10.43.215.132
    externalTrafficPolicy: Cluster
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: graphql-http
      nodePort: 31747
      port: 8547
      protocol: TCP
      targetPort: 8547
    - name: p2p-tcp
      nodePort: 30989
      port: 30303
      protocol: TCP
      targetPort: 30303
    - name: p2p-udp
      nodePort: 30989
      port: 30303
      protocol: UDP
      targetPort: 30303
    - name: rpc-http
      nodePort: 31745
      port: 8545
      protocol: TCP
      targetPort: 8545
    - name: rpc-ws
      nodePort: 31746
      port: 8546
      protocol: TCP
      targetPort: 8546
    selector:
      app: besu
      app.kubernetes.io/instance: node3
      app.kubernetes.io/name: besu-node3
      app.kubernetes.io/part-of: paladin
    sessionAffinity: None
    type: NodePort
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      field.cattle.io/publicEndpoints: '[{"port":31548,"protocol":"TCP","serviceName":"paladin:paladin-node1","allNodes":true},{"port":31549,"protocol":"TCP","serviceName":"paladin:paladin-node1","allNodes":true},{"port":30354,"protocol":"TCP","serviceName":"paladin:paladin-node1","allNodes":true}]'
    creationTimestamp: "2025-07-01T01:25:44Z"
    labels:
      app: paladin
      app.kubernetes.io/instance: node1
      app.kubernetes.io/name: paladin-node1
      app.kubernetes.io/part-of: paladin
    name: paladin-node1
    namespace: paladin
    ownerReferences:
    - apiVersion: core.paladin.io/v1alpha1
      blockOwnerDeletion: true
      controller: true
      kind: Paladin
      name: node1
      uid: c70a46b2-1b61-4620-9de0-7494257d86fe
    resourceVersion: "37166422"
    uid: a3c3e4a6-aaac-4bfd-8dbe-5617e60013d4
  spec:
    clusterIP: 10.43.21.50
    clusterIPs:
    - 10.43.21.50
    externalTrafficPolicy: Cluster
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: rpc-http
      nodePort: 31548
      port: 8548
      protocol: TCP
      targetPort: 8548
    - name: rpc-ws
      nodePort: 31549
      port: 8549
      protocol: TCP
      targetPort: 8549
    - name: transport-grpc
      nodePort: 30354
      port: 9000
      protocol: TCP
      targetPort: 9000
    selector:
      app: paladin
      app.kubernetes.io/instance: node1
      app.kubernetes.io/name: paladin-node1
      app.kubernetes.io/part-of: paladin
    sessionAffinity: None
    type: NodePort
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      field.cattle.io/publicEndpoints: '[{"port":31648,"protocol":"TCP","serviceName":"paladin:paladin-node2","allNodes":true},{"port":31649,"protocol":"TCP","serviceName":"paladin:paladin-node2","allNodes":true},{"port":30879,"protocol":"TCP","serviceName":"paladin:paladin-node2","allNodes":true}]'
    creationTimestamp: "2025-07-01T01:25:44Z"
    labels:
      app: paladin
      app.kubernetes.io/instance: node2
      app.kubernetes.io/name: paladin-node2
      app.kubernetes.io/part-of: paladin
    name: paladin-node2
    namespace: paladin
    ownerReferences:
    - apiVersion: core.paladin.io/v1alpha1
      blockOwnerDeletion: true
      controller: true
      kind: Paladin
      name: node2
      uid: bc6b23ed-e984-41a9-8e8d-81e225bb9391
    resourceVersion: "37166416"
    uid: e5015296-8152-4186-a42e-f781e7543107
  spec:
    clusterIP: 10.43.110.74
    clusterIPs:
    - 10.43.110.74
    externalTrafficPolicy: Cluster
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: rpc-http
      nodePort: 31648
      port: 8548
      protocol: TCP
      targetPort: 8548
    - name: rpc-ws
      nodePort: 31649
      port: 8549
      protocol: TCP
      targetPort: 8549
    - name: transport-grpc
      nodePort: 30879
      port: 9000
      protocol: TCP
      targetPort: 9000
    selector:
      app: paladin
      app.kubernetes.io/instance: node2
      app.kubernetes.io/name: paladin-node2
      app.kubernetes.io/part-of: paladin
    sessionAffinity: None
    type: NodePort
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      field.cattle.io/publicEndpoints: '[{"port":31748,"protocol":"TCP","serviceName":"paladin:paladin-node3","allNodes":true},{"port":31749,"protocol":"TCP","serviceName":"paladin:paladin-node3","allNodes":true},{"port":30318,"protocol":"TCP","serviceName":"paladin:paladin-node3","allNodes":true}]'
    creationTimestamp: "2025-07-01T01:25:45Z"
    labels:
      app: paladin
      app.kubernetes.io/instance: node3
      app.kubernetes.io/name: paladin-node3
      app.kubernetes.io/part-of: paladin
    name: paladin-node3
    namespace: paladin
    ownerReferences:
    - apiVersion: core.paladin.io/v1alpha1
      blockOwnerDeletion: true
      controller: true
      kind: Paladin
      name: node3
      uid: 2201fd9c-0b50-4185-93c8-eaa29054831c
    resourceVersion: "37166556"
    uid: 767556fb-04d5-4100-908e-f3a828a5bb54
  spec:
    clusterIP: 10.43.6.239
    clusterIPs:
    - 10.43.6.239
    externalTrafficPolicy: Cluster
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: rpc-http
      nodePort: 31748
      port: 8548
      protocol: TCP
      targetPort: 8548
    - name: rpc-ws
      nodePort: 31749
      port: 8549
      protocol: TCP
      targetPort: 8549
    - name: transport-grpc
      nodePort: 30318
      port: 9000
      protocol: TCP
      targetPort: 9000
    selector:
      app: paladin
      app.kubernetes.io/instance: node3
      app.kubernetes.io/name: paladin-node3
      app.kubernetes.io/part-of: paladin
    sessionAffinity: None
    type: NodePort
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      meta.helm.sh/release-name: paladin
      meta.helm.sh/release-namespace: paladin
    creationTimestamp: "2025-07-01T01:25:40Z"
    labels:
      app.kubernetes.io/managed-by: Helm
    name: paladin-operator
    namespace: paladin
    resourceVersion: "37166267"
    uid: add720e8-5167-4c95-bd5a-66f75dce4b0a
  spec:
    clusterIP: 10.43.151.129
    clusterIPs:
    - 10.43.151.129
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    selector:
      app.kubernetes.io/name: paladin-operator
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
